<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    app:cardElevation="12dp"
    app:cardBackgroundColor="@color/blanco"
    android:layout_margin="35dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="28dp"
        android:paddingTop="25dp"
        android:paddingBottom="28dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTituloDialogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/est_s_seguro_a"
            android:textSize="18sp"
            android:textColor="@color/gris_texto"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tvMensajeDialogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esta_acci_n_no_se_puede_deshacer"
            android:textColor="@color/gris_texto"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAceptar"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/aceptar"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:backgroundTint="@color/rojo_boton"
                app:cornerRadius="25dp"
                app:elevation="2dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/cancelar"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                app:backgroundTint="@color/verde_boton_anadir"
                app:cornerRadius="25dp"
                android:textAllCaps="false"
                app:elevation="2dp"/>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>