<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:clipToPadding="false"
    android:clipChildren="false">

    <ImageButton
        android:id="@+id/btnCerrar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_button_green"
        android:elevation="4dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blanco" />

    <TextView
        android:id="@+id/tvTituloPaso3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/rutina_personalizada"
        android:textColor="@color/verde_principal"
        android:textSize="32sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/btnCerrar"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollTareas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@id/botones"
        app:layout_constraintTop_toBottomOf="@id/tvTituloPaso3">

        <LinearLayout
            android:id="@+id/llContenedorTareas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAtras"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/atr_s"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:background="@drawable/btn_back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFinalizar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="50dp"
            android:text="@string/finalizar"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:background="@drawable/btn_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCargando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/verde_principal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/guardando_planta"
            android:textColor="@color/verde_principal"
            android:textSize="18sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>