<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:padding="25dp"
    android:clipToPadding="false"
    android:clipChildren="false">

    <ImageButton
        android:id="@+id/btnCerrar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_button_close"
        android:elevation="4dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blanco" />

    <TextView
        android:id="@+id/tvTituloPaso1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/identifica_tu_planta"
        android:textColor="@color/verde_principal"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCerrar" />

    <TextView
        android:id="@+id/tvDescripcionPaso1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/toma_una_foto_de_tu_planta_o_selecciona_una_imagen_de_tu_galer_a"
        android:textColor="@color/gris_texto"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloPaso1" />

    <LinearLayout
        android:id="@+id/llContenedorBotones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescripcionPaso1">

        <ImageView
            android:id="@+id/btnCamara"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_rounded"
            android:clipToOutline="true"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_photo"
            app:tint="@color/verde_seleccionado" />

        <View
            android:layout_width="80dp"
            android:layout_height="1dp" />

        <ImageView
            android:id="@+id/btnGaleria"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_rounded"
            android:clipToOutline="true"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image"
            app:tint="@color/verde_seleccionado" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivImagenCapturada"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:alpha="0"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llContenedorBotones"
        app:shapeAppearanceOverlay="@style/MarcoBordes25dp"
        app:strokeColor="@color/verde_principal"
        app:strokeWidth="4dp" />

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAtras"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_back"
            android:text="@string/atr_s"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSiguientePaso1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_next"
            android:text="@string/siguiente"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCargando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/verde_principal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/identificando_planta"
            android:textColor="@color/verde_principal"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>