<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".ui.main.InicioFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTiempoMeteo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/verde_principal"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ivViento"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/viento"
                android:src="@drawable/ic_viento"
                app:tint="@color/blanco"
                app:layout_constraintTop_toBottomOf="@id/tvFecha"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvVientoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/ivViento"
                app:layout_constraintStart_toEndOf="@id/ivViento"
                app:layout_constraintTop_toTopOf="@id/ivViento" />

            <ImageView
                android:id="@+id/ivHumedad"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/humedad"
                android:src="@drawable/ic_humedad"
                app:tint="@color/blanco"
                app:layout_constraintTop_toBottomOf="@id/ivViento"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvHumedadValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/ivHumedad"
                app:layout_constraintStart_toEndOf="@id/ivHumedad"
                app:layout_constraintTop_toTopOf="@id/ivHumedad" />

            <ImageView
                android:id="@+id/ivLluvia"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/lluvia"
                android:src="@drawable/ic_lluvia"
                app:tint="@color/blanco"
                app:layout_constraintTop_toBottomOf="@id/ivHumedad"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvLluviaValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/ivLluvia"
                app:layout_constraintStart_toEndOf="@id/ivLluvia"
                app:layout_constraintTop_toTopOf="@id/ivLluvia" />

            <TextView
                android:id="@+id/tvTemperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/ivClima"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/clima"
                app:layout_constraintBottom_toTopOf="@id/tvTemperatura"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/tvTemperatura" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>